# AI_Powered_Stocks_Evaluation

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.next/: trace  trace-build
agents/: __init__.py  agents.py  openrouter_agents.py  prompts.yaml
alembic/: env.py
alembic/versions/: 5d878e41e9c4_baseline_existing_schema.py  67b3d2da0aef_drop_domain_column_from_watchlist.py  a1b2c3d4e5f6_add_sort_order_to_watchlist.py  c50f87e83bbf_sync_orm_with_database.py  cd5512f0000f_vector_384_to_1536.py
config/: __init__.py  globals.py
data_retrieval/: sec_data.py
database/: __init__.py  connection.py  database.py  embeddings.py  financial_statements.py  ingestion.py  orm.py  retrieval_tool.py  vs_addition.py  yahoo_financial_statements.py
dependencies/: __init__.py  oauth.py
frontend/: _inspiration.html  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/components/: AnalysisCard.tsx  AnalysisResults.tsx  AuthModal.tsx  DebateSection.tsx  FeatureGateModal.tsx  GlassContainer.tsx  HarmonizationCard.tsx  Header.tsx  HomeParticleCanvas.tsx  LlmTracker.tsx  MergedPage.tsx  Nav.tsx  ParticleCanvas.tsx  PhaseStatus.tsx  RateLimitModal.tsx  ScoreGauge.tsx  TickerInput.tsx
frontend/src/hooks/: useAnalysis.ts  useAuth.ts
frontend/src/lib/: api.ts  pricing.ts  tokenCosts.ts  types.ts
func/: __init__.py  debate_orchestration.py
logs/: __init__.py  llm_logger.py
reports/: pdf_generator.py
reports/templates/: financial_report.html
routes/: __init__.py  analisys.py  auth.py  financial_analisys.py  financial_debate.py  financial_harmonization.py  financial_ingestion.py  financial_report.py  watchlist.py
